[gd_scene load_steps=10 format=2]

[ext_resource path="res://Veri/Kodlar/ALAN.gd" type="Script" id=1]
[ext_resource path="res://Veri/Resimler/CEKIC.png" type="Texture" id=2]
[ext_resource path="res://Veri/Resimler/EGIT.png" type="Texture" id=3]
[ext_resource path="res://Veri/Resimler/CARPI.png" type="Texture" id=4]
[ext_resource path="res://Veri/Resimler/Asker.png" type="Texture" id=5]
[ext_resource path="res://Veri/Resimler/ASKER 2.png" type="Texture" id=6]
[ext_resource path="res://Veri/Resimler/ASKER 3.png" type="Texture" id=7]
[ext_resource path="res://Veri/Resimler/BINALAR/CIFTLIK.png" type="Texture" id=8]
[ext_resource path="res://Veri/Resimler/hexagon.svg" type="Texture" id=9]

[node name="ALAN" type="Area2D" groups=["Alan"]]
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0.092, 0.092 )
scale = Vector2( 0.264, 0.264 )
color = Color( 0, 0.521569, 0.00784314, 1 )
texture = ExtResource( 9 )
polygon = PoolVector2Array( 198.5, -340.5, 198.5, -338.4, 204.5, -333.4, 204.5, -331, 392.5, -7, 393.8, -4.90109, 393.8, -4.90109, 391.6, 6.5, 210.7, 323.5, 209.7, 323.5, 202.7, 336.5, 201.3, 336.5, 195.3, 342.5, 191.5, 342.5, -197.5, 341.5, -197.5, 339.3, -207.5, 328.3, -207.5, 326, -389.5, 12, -389.5, 10, -394.5, -2.5, -392, -2.5, -390.1, -10.5, -388.6, -10.5, -204.7, -331.5, -203.5, -331.5, -195.5, -341.5, -193.5, -341.5, -193.5, -342.5 )
uv = PoolVector2Array( 595, 56, 595, 58.1, 601, 63.1, 601, 65.5, 789, 389.5, 789, 393, 790.3, 403, 788.1, 403, 607.2, 720, 606.2, 720, 599.2, 733, 597.8, 733, 591.8, 739, 588, 739, 199, 738, 199, 735.8, 189, 724.8, 189, 722.5, 7, 408.5, 7, 406.5, 2, 394, 4.5, 394, 6.4, 386, 7.9, 386, 191.8, 65, 193, 65, 201, 55, 203, 55, 203, 54 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28 ) ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 96, 0, 48, -88, -48, -88, -96, 0, -48, 88, 48, 88 )

[node name="Button" type="TextureButton" parent="."]
margin_left = -56.0
margin_top = -40.0
margin_right = 56.0
margin_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false

[node name="Control" type="Control" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="EGIT" type="TextureButton" parent="CanvasLayer/Control/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 356.0
margin_top = 432.0
margin_right = 484.0
margin_bottom = 560.0
texture_normal = ExtResource( 3 )
expand = true

[node name="INSAAT" type="TextureButton" parent="CanvasLayer/Control/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 432.0
margin_right = 628.0
margin_bottom = 560.0
texture_normal = ExtResource( 2 )
expand = true

[node name="CARPI" type="TextureButton" parent="CanvasLayer/Control/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 636.0
margin_top = 432.0
margin_right = 764.0
margin_bottom = 560.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Control2" type="Control" parent="CanvasLayer/Control"]
visible = false
margin_left = 320.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 448.0

[node name="ASKER1" type="TextureButton" parent="CanvasLayer/Control/Control2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 5 )
expand = true

[node name="ASKER2" type="TextureButton" parent="CanvasLayer/Control/Control2"]
margin_left = 136.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 120.0
texture_normal = ExtResource( 6 )
expand = true

[node name="ASKER3" type="TextureButton" parent="CanvasLayer/Control/Control2"]
margin_left = 264.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 120.0
texture_normal = ExtResource( 7 )
expand = true

[node name="CARPI2" type="TextureButton" parent="CanvasLayer/Control/Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 136.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = -8.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Control3" type="Control" parent="CanvasLayer/Control"]
visible = false
margin_left = 320.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 448.0

[node name="CIFTLIK" type="TextureButton" parent="CanvasLayer/Control/Control3"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 8 )
expand = true

[node name="ASKER2" type="TextureButton" parent="CanvasLayer/Control/Control3"]
visible = false
margin_left = 136.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 120.0
texture_normal = ExtResource( 6 )
expand = true

[node name="ASKER3" type="TextureButton" parent="CanvasLayer/Control/Control3"]
visible = false
margin_left = 264.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 120.0
texture_normal = ExtResource( 7 )
expand = true

[node name="CARPI2" type="TextureButton" parent="CanvasLayer/Control/Control3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 136.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = -8.0
texture_normal = ExtResource( 4 )
expand = true

[connection signal="area_entered" from="." to="." method="_on_ALAN_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ALAN_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_ALAN_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ALAN_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control/EGIT" to="." method="_on_EGIT_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control/INSAAT" to="." method="_on_INSAAT_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control/CARPI" to="." method="_on_CARPI_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control2/ASKER1" to="." method="_on_ASKER1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control2/ASKER2" to="." method="_on_ASKER2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control2/ASKER3" to="." method="_on_ASKER3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control2/CARPI2" to="." method="_on_CARPI2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control3/ASKER3" to="." method="_on_ASKER3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Control3/CARPI2" to="." method="_on_CARPI2_pressed"]
